// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rehydrating rules should rehydrate css custom properties 1`] = `
Object {
  "--custom-property12px": Object {
    "className": "a",
    "declaration": "--custom-property:12px",
    "media": "",
    "pseudo": "",
    "selector": ".a",
    "support": "",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating rules should rehydrate prioritized longhand rules 1`] = `
Object {
  ":hovercolorred": Object {
    "className": "c",
    "declaration": "color:red",
    "media": "",
    "pseudo": ":hover",
    "selector": ".c:hover",
    "support": "",
    "type": "RULE",
  },
  "padding10px": Object {
    "className": "b",
    "declaration": "padding:10px",
    "media": "",
    "pseudo": "",
    "selector": ".b",
    "support": "",
    "type": "RULE",
  },
  "paddingLeft20px": Object {
    "className": "a",
    "declaration": "padding-left:20px",
    "media": "",
    "pseudo": "",
    "selector": ".a",
    "support": "",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating rules should rehydrate the renderer cache 1`] = `
Object {
  ":hover:activeborderColor2px solid rgb(255, 255, 0)": Object {
    "className": "c",
    "declaration": "border-color:2px solid rgb(255, 255, 0)",
    "media": "",
    "pseudo": ":hover:active",
    "selector": ".c:hover:active",
    "support": "",
    "type": "RULE",
  },
  "colorblue": Object {
    "className": "b",
    "declaration": "color:blue",
    "media": "",
    "pseudo": "",
    "selector": ".b",
    "support": "",
    "type": "RULE",
  },
  "colorred": Object {
    "className": "a",
    "declaration": "color:red",
    "media": "",
    "pseudo": "",
    "selector": ".a",
    "support": "",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating rules should rehydrate the renderer cache with specifity prefix 1`] = `
Object {
  ":hover:activeborderColor2px solid rgb(255, 255, 0)": Object {
    "className": "c",
    "declaration": "border-color:2px solid rgb(255, 255, 0)",
    "media": "",
    "pseudo": ":hover:active",
    "selector": ".parentClass .c:hover:active",
    "support": "",
    "type": "RULE",
  },
  "colorblue": Object {
    "className": "b",
    "declaration": "color:blue",
    "media": "",
    "pseudo": "",
    "selector": ".parentClass .b",
    "support": "",
    "type": "RULE",
  },
  "colorred": Object {
    "className": "a",
    "declaration": "color:red",
    "media": "",
    "pseudo": "",
    "selector": ".parentClass .a",
    "support": "",
    "type": "RULE",
  },
}
`;
